--- a/frontend/components/ForumTreeNode/ForumTreeNode.less
+++ b/frontend/components/ForumTreeNode/ForumTreeNode.less
@@ -1,3 +1,5 @@
+@import "~bootstrap/less/mixins";
+
 @import "../variables";
 
 .forumlist{
@@ -8,11 +10,21 @@
       padding-left: 0;
       padding-right: 0;
       padding-bottom: 8px;
-      border-radius: 0;
       font-family: @opensansregular;
 
       .panel-row{
           margin: 0;
+      }
+
+      .panel-title{
+        a{
+          .transition(color .25s ease-in-out);
+
+          &:hover, &:focus{
+            text-decoration: none;
+            color: @blue-dark;
+          }
+        }
       }
 
       .forum-count-col{
@@ -28,18 +40,21 @@
 
   .panel-body{
     padding: 0;
+    font-family: @opensansregular;
 
     .panel-row{
-        margin: 0;
-        padding-top: 10px;
-        padding-bottom: 5px;
-        border-bottom: 1px solid @gray-lighter;
+      position: relative;
+      margin: 0;
+      padding-top: 10px;
+      padding-bottom: 5px;
+      border-bottom: 1px solid @gray-lighter;
+      overflow: hidden;
     }
 
     .forum-icon{
       padding-left: 5px;
       padding-right: 20px;
-      width: 50px;
+      width: 60px;
       height: 45px;
       line-height: 49px;
       text-align: center;
@@ -63,7 +78,7 @@
       .sub-forums{
         font-size: 12px;
 
-        div{
+        div.forum-node{
           margin-left: 6px;
           display: inline-block;
         }
